Update Troubleshooting with setup